# BlazorShop.PresentationV2/BlazorShop.Web.SharedV2/Models/Product/GetCatalogProduct.cs
@@ -26,6 +26,14 @@ namespace BlazorShop.Web.SharedV2.Models.Product
         [DataType(DataType.Currency)]
         public decimal? ComparePrice { get; set; }
 
+        [DataType(DataType.Currency)]
+        public decimal? DisplayPrice { get; set; }
+
+        [DataType(DataType.Currency)]
+        public decimal? DisplayComparePrice { get; set; }
+
+        public string? DisplayCurrencyCode { get; set; }
+
         [Required(ErrorMessage = "The Image field is required.")]
         public string? Image { get; set; }
 
